; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_proc.c_PublishStartupProcessInformation.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_proc.c_PublishStartupProcessInformation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@ProcStructLock = common dso_local global i32 0, align 4
@MyProc = common dso_local global i32 0, align 4
@ProcGlobal = common dso_local global %struct.TYPE_2__* null, align 8
@MyProcPid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PublishStartupProcessInformation() #0 {
  %1 = load i32, i32* @ProcStructLock, align 4
  %2 = call i32 @SpinLockAcquire(i32 %1)
  %3 = load i32, i32* @MyProc, align 4
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ProcGlobal, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 1
  store i32 %3, i32* %5, align 4
  %6 = load i32, i32* @MyProcPid, align 4
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ProcGlobal, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store i32 %6, i32* %8, align 4
  %9 = load i32, i32* @ProcStructLock, align 4
  %10 = call i32 @SpinLockRelease(i32 %9)
  ret void
}

declare dso_local i32 @SpinLockAcquire(i32) #1

declare dso_local i32 @SpinLockRelease(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
